FINALLY solved scroll screenshot issue it was always stuck to the top of the screen so if i try to scroll won't capture the visible area BUT NOW it's solved

--- a/project/project.css
+++ b/project/project.css
@@ -201,12 +201,9 @@ background-color: antiquewhite;
     display: flex; /* Make parent a flex container */
     flex-direction: column; /* Align children in a column */
     padding:0; /* TO INSURE THE IFRAME SHOWS THE CONTENT EXACTLY INSIDE IT*/
-
+    min-width: 280px !important;
 
 /*new smartphone mockup section*/
-/*    position: relative;*/
-    /*width: 360px; !* Adjust to your image size *!*/
-    /*height: 640px; !* Adjust to your image size *!*/
     overflow: hidden;
     border:none;
 }
